<resources>
    <string name="app_name">NIM2020</string>
    <string name="game_name">Let\'s play NIM</string>
    <string name="first_player_name">First player name:</string>
    <string name="second_player_name">Second player name:</string>
    <string name="button_add_players">Add players</string>
    <string name="pile_1_size">Pile 1 size:</string>
    <string name="pile_2_size">Pile 2 size:</string>
    <string name="pile_3_size">Pile 3 size:</string>
    <string name="checkbox_hint">Allow hint?</string>
    <string name="button_start_game">START GAME</string>
    <string name="button_ok">OK</string>
    <string name="invalid_name">Name cannot be empty</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_increase_font">Increase font</string>
    <string name="menu_decrease_font">Decrease font</string>
    <string name="hint_take_val">Amount to take</string>
    <string name="button_play">PLAY</string>
    <string name="enter_player_name">Enter player name</string>
    <string name="wrong_pile_size">Wrong pile size</string>
    <string name="game_over">Game over</string>
    <string name="on_the_move">On the move:</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="cant_take_this_much">Cannot take this much</string>
    <string name="wins">wins!</string>
    <string name="menu_background_color">Background color</string>
    <string name="menu_item_hint">Hint</string>
</resources>
