<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/text_view_game_name"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_player_name"
            android:text="@string/first_player_name"
            android:layout_weight="0.35"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/p1_name"
            android:layout_weight="0.65"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/second_player_name"
            android:text="@string/second_player_name"
            android:layout_weight="0.35"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/p2_name"
            android:layout_weight="0.65"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button_add_players"
        android:text="@string/button_add_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/pile_1_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pile_1"
            android:inputType="numberDecimal"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/pile_2_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pile_2"
            android:inputType="numberDecimal"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/pile_3_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pile_3"
            android:inputType="numberDecimal"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <CheckBox
        android:id="@+id/checkbox_hint"
        android:text="@string/checkbox_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/button_start_game"
        android:text="@string/button_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>